# mogimail

./: .gitignore  Cargo.toml  README.en.md  README.md  flake.nix
.github/workflows/: flake-check.yaml  update-flake-lock.yaml
doc/: spec.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/smtp/: commands.rs  email.rs  error.rs  mod.rs  response.rs  server.rs  session.rs
tests/: integration_tests.rs  lettre_test.rs
