[package]
name = "mogimail"
version = "0.1.1"
edition = "2024"

description = "Embedded SMTP server"
repository = "https://github.com/akar1ngo/mogimail"
license = "MIT"
keywords = ["mail", "smtp"]
readme = "README.en.md"

[dependencies]
thiserror = { version = "2", default-features = false }

[[bin]]
name = "mogimail"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[lib]
name = "mogimail"
path = "src/lib.rs"
