[package]
name = "mogimail"
version = "0.2.0"
edition = "2024"

description = "Embedded SMTP server"
repository = "https://github.com/akar1ngo/mogimail"
license = "MIT"
keywords = ["mail", "smtp"]
readme = "README.en.md"

[features]
default = []
ehlo = []

[dependencies]
thiserror = { version = "2", default-features = false }

[dev-dependencies]
lettre = "0.11"

[[bin]]
name = "mogimail"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[lib]
name = "mogimail"
path = "src/lib.rs"
